gcc/ChangeLog: PR c++/20008 * stmt.c (expand_case): Don't assume cleanup_tree_cfg will remove cases that are out-of-range for the index type. gcc/testsuite/ChangeLog: PR c++/20008 * g++.dg/opt/switch4.C: New.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@95225 138bc75d-0d04-0410-961f-82ee72b054a4